# AI-Talent-Marketplace-Platform

./: .dockerignore  .env.example  .env.production.ai.example  .env.production.api.example  .env.production.mobile.example  .env.production.web.example  .gitignore  EXECUTION.md  FOUNDATION.md  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  map.md  package-lock.json  package.json  render.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/: copilot-instructions.md  execution-continuation.md
maingoalandreference/: AI Talent Marketplace Platform (SOW).md
notes/: ADR.md  CASE-STUDY.md  CONTINUE-AFTER-SLEEP.md  DATABASE.md  DEMO-SCRIPT.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  EXECUTION.md  FOUNDATION.md  QA-TESTING-GUIDE.md  ROADMAP.md  ROLLOUT-CHECKLIST.md  UI-BEAUTIFICATION-CONTEXT.md  (+2 more)
services/ai-engine/: Dockerfile  package.json  pyproject.toml
services/ai-engine/ai_talent_marketplace_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai-engine/app/: main.py  models.py
services/ai-engine/app/assistant/: __init__.py  heuristics.py  llm_client.py  service.py
services/ai-engine/app/matching/: __init__.py  db.py  embedding.py  scoring.py  service.py
services/ai-engine/app/parsing/: __init__.py  extractor.py  heuristics.py  llm_client.py  service.py
services/ai-engine/scripts/: run-dev.mjs  run-prod.mjs  run-python-module.mjs
services/ai-engine/tests/: conftest.py  test_matching.py  test_parse_resume.py  test_role_description.py
services/ai-engine/tests/fixtures/: junior_resume.txt  mid_resume.txt  senior_resume.txt
(+139 files in other folders)
