[project]
name = "ai-talent-marketplace-ai-engine"
version = "0.1.0"
description = "Internal FastAPI service for the AI Talent Marketplace Platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.11,<0.116.0",
  "httpx>=0.28.1,<0.29.0",
  "pypdf>=5.9.0,<7.0.0",
  "psycopg[binary]>=3.2.12,<4.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "pytest>=8.4.1,<10.0.0",
  "uvicorn>=0.34.0,<0.35.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
